--- a/Nataly_Garces_Co_Portfolio/index.html
+++ b/Nataly_Garces_Co_Portfolio/index.html
@@ -11,16 +11,6 @@
             name="viewport"
             content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5"
         />
-        <meta property="og:image" content="https://vanholtz.co/img/social_share.png" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:site" content="Van Holtz Co" />
-        <meta name="twitter:creator" content="@vanholtzco" />
-        <meta name="twitter:title" content="Van Holtz Co" />
-        <meta
-            name="twitter:description"
-            content="Studio of Eric Van Holtz. Specializing in refined digital web experiences with a focus on animated, responsive, and interactive content."
-        />
-        <meta name="twitter:image" content="https://vanholtz.co/img/social_share.png" />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -28,11 +18,8 @@
         />
         <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon.png" />
-        <link rel="manifest" href="img/icons/site.webmanifest" />
-        <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#000000" />
         <link rel="shortcut icon" href="img/icons/favicon.png" />
         <meta name="msapplication-TileColor" content="#ffffff" />
-        <meta name="msapplication-config" content="/img/icons/browserconfig.xml" />
         <meta name="theme-color" content="#ffffff" />
         <link href="css/style.css" rel="stylesheet" />
         <link
@@ -131,7 +118,6 @@
                                 <ul class="projects">
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
-                                            <!-- ///////////////////// -->
                                             <a
                                                 href="projects/candle_studio/index.html"
                                                 data-info="2023"
@@ -143,7 +129,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/my-app/public/index.html"
+                                                href="projects/index.html"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
                                                 >видеотека</a
@@ -153,7 +139,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/tickets/my-app/public/index.html"
+                                                href="projects/index.html"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
                                                 >поиск<br />билетов
@@ -163,7 +149,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/onxmaps/index.html"
+                                                href="projects/index.html"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
                                                 >сравни<br />телефоны</a
@@ -173,7 +159,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/iconmotosports/index.html"
+                                                href="projects/index.html"
                                                 data-info="2023"
                                                 data-barba="HomeTransition"
                                                 >English<br />тренер</a
@@ -183,7 +169,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/parliament/index.html"
+                                                href="projects/index.html"
                                                 data-info="2022"
                                                 data-barba="HomeTransition"
                                                 >менеджер<br />задач</a
@@ -233,9 +219,9 @@
         </section>
         <script src="ajax/libs/barba.js/1.0.0/barba.min.js"></script>
         <script src="js/app.js?v=1.1.0"></script>
+        <script src="js/loadDeferredStyles.js"></script>
         <noscript id="deferred-styles"
             ><link rel="stylesheet" type="text/css" href="css/app.css" /><link
         /></noscript>
-        <script src="js/loadDeferredStyles.js"></script>
     </body>
 </html>
