--- a/Nataly_Garces_Co_Portfolio/index.html
+++ b/Nataly_Garces_Co_Portfolio/index.html
@@ -1,16 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Nataly Garces Studio</title>
-        <meta
-            name="description"
-            content="Студия Nataly Garces Co. cпециализируется на создании современных цифровых веб-сервисов с акцентом на анимированный, адаптивный и интерактивный контент."
-        />
         <meta charset="utf-8" />
         <meta
             name="viewport"
             content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5"
         />
+        <meta
+            name="description"
+            content="Студия Nataly Garces Co. cпециализируется на создании современных цифровых веб-сервисов с акцентом на анимированный, адаптивный и интерактивный контент."
+        />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta name="theme-color" content="#ffffff" />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -19,15 +20,8 @@
         <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon.png" />
         <link rel="shortcut icon" href="img/icons/favicon.png" />
-        <meta name="msapplication-TileColor" content="#ffffff" />
-        <meta name="theme-color" content="#ffffff" />
         <link href="css/style.css" rel="stylesheet" />
-        <link
-            rel="preload"
-            href="fonts/DrukWide-Super-Web.woff2"
-            as="font"
-            crossorigin="anonymous"
-        />
+        <title>Nataly Garces Studio</title>
     </head>
     <body class="home-page night-mode loading">
         <header class="ui">
@@ -119,7 +113,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/candle_studio/index.html"
+                                                href="https://candle-studio.garcesstudio.ru/"
                                                 data-info="2023"
                                                 data-barba="HomeTransition"
                                                 >студия<br />свечей</a
@@ -129,7 +123,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/index.html"
+                                                href="https://movies-library.garcesstudio.ru/"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
                                                 >видеотека</a
@@ -139,7 +133,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/index.html"
+                                                href="https://tickets.garcesstudio.ru/"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
                                                 >поиск<br />билетов
@@ -149,7 +143,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/index.html"
+                                                href="https://compare-phones.garcesstudio.ru/"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
                                                 >сравни<br />телефоны</a
@@ -159,7 +153,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/index.html"
+                                                href="https://english-trainer.garcesstudio.ru/"
                                                 data-info="2023"
                                                 data-barba="HomeTransition"
                                                 >English<br />тренер</a
@@ -169,7 +163,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="projects/index.html"
+                                                href="https://task-manager.garcesstudio.ru/"
                                                 data-info="2022"
                                                 data-barba="HomeTransition"
                                                 >менеджер<br />задач</a
