--- a/Nataly_Garces_Co_Portfolio/index.html
+++ b/Nataly_Garces_Co_Portfolio/index.html
@@ -1,6 +1,20 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-XKJRNZ9GT0"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-XKJRNZ9GT0");
+        </script>
         <meta charset="utf-8" />
         <meta
             name="viewport"
