--- a/Nataly_Garces_Co_Portfolio/index.html
+++ b/Nataly_Garces_Co_Portfolio/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <!-- Google tag (gtag.js) -->
         <script
@@ -127,9 +127,22 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
+                                                style="right: 80px"
+                                                href="https://carservice.garcesstudio.ru/"
+                                                data-info="2024"
+                                                data-barba="HomeTransition"
+                                                target="_blank"
+                                                >автосервис</a
+                                            >
+                                        </div>
+                                    </li>
+                                    <li class="projectsLi" data-barba="HomeTransition">
+                                        <div class="projectContainer">
+                                            <a
                                                 href="https://candle-studio.garcesstudio.ru/"
                                                 data-info="2023"
                                                 data-barba="HomeTransition"
+                                                target="_blank"
                                                 >студия<br />свечей</a
                                             >
                                         </div>
@@ -140,6 +153,7 @@
                                                 href="https://movies-library.garcesstudio.ru/"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
+                                                target="_blank"
                                                 >видеотека</a
                                             >
                                         </div>
@@ -150,6 +164,7 @@
                                                 href="https://tickets.garcesstudio.ru/"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
+                                                target="_blank"
                                                 >поиск<br />билетов
                                             </a>
                                         </div>
@@ -160,6 +175,7 @@
                                                 href="https://compare-phones.garcesstudio.ru/"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
+                                                target="_blank"
                                                 >сравни<br />телефоны</a
                                             >
                                         </div>
@@ -168,19 +184,10 @@
                                         <div class="projectContainer">
                                             <a
                                                 href="https://english-trainer.garcesstudio.ru/"
-                                                data-info="2023"
-                                                data-barba="HomeTransition"
-                                                >English<br />тренер</a
-                                            >
-                                        </div>
-                                    </li>
-                                    <li class="projectsLi" data-barba="HomeTransition">
-                                        <div class="projectContainer">
-                                            <a
-                                                href="https://task-manager.garcesstudio.ru/"
                                                 data-info="2022"
                                                 data-barba="HomeTransition"
-                                                >менеджер<br />задач</a
+                                                target="_blank"
+                                                >English<br />тренер</a
                                             >
                                         </div>
                                     </li>
