--- a/Nataly_Garces_Co_Portfolio/index.html
+++ b/Nataly_Garces_Co_Portfolio/index.html
@@ -127,7 +127,19 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                style="right: 80px"
+                                                style="right: 50px"
+                                                href="https://maxsticker.ru/"
+                                                data-info="2024"
+                                                data-barba="HomeTransition"
+                                                target="_blank"
+                                                >Максстикер</a
+                                            >
+                                        </div>
+                                    </li>
+                                    <li class="projectsLi" data-barba="HomeTransition">
+                                        <div class="projectContainer">
+                                            <a
+                                                style="right: 50px"
                                                 href="https://carservice.garcesstudio.ru/"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
@@ -188,6 +200,17 @@
                                                 data-barba="HomeTransition"
                                                 target="_blank"
                                                 >English<br />тренер</a
+                                            >
+                                        </div>
+                                    </li>
+                                    <li class="projectsLi" data-barba="HomeTransition">
+                                        <div class="projectContainer">
+                                            <a
+                                                href="/Chess_club/chess.html"
+                                                data-info="2024"
+                                                data-barba="HomeTransition"
+                                                target="_blank"
+                                                >шахматы</a
                                             >
                                         </div>
                                     </li>
