--- a/Nataly_Garces_Co_Portfolio/index.html
+++ b/Nataly_Garces_Co_Portfolio/index.html
@@ -206,7 +206,7 @@
                                     <li class="projectsLi" data-barba="HomeTransition">
                                         <div class="projectContainer">
                                             <a
-                                                href="/Chess_club/chess.html"
+                                                href="https://garcesstudio.ru/chess.html"
                                                 data-info="2024"
                                                 data-barba="HomeTransition"
                                                 target="_blank"
